<resources>
    <string name="termux_about_dialog_message">"&TERMUX_APP_NAME; is an Android terminal emulator fully based on Termux.
Created for non commercial use.
The goal is to create a lightweight and convenient, more modern analogue of jackpal Android Terminal Emulator."</string>
    <string name="termux_update_dialog_message">"Version:
%s
Changelog:
%s"</string>
    <string name="termux_update_dialog_button">Update</string>
    <string name="termux_quick_exit_long_press_toast">Click to exit</string>
    <string name="termux_quick_exit_press_toast">Press and hold to exit</string>
    <string name="termux_terminal_export_import_title">Export or import Settings?</string>
    <string name="termux_terminal_export_import_message">Export to file or import from file all settings &TERMUX_APP_NAME;</string>
    <string name="termux_terminal_export">Export</string>
    <string name="termux_terminal_import">Import</string>
    <string name="title_share_with">Share With</string>
    <string name="title_open_url_with">Open URL With</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_copy">Copy</string>
    <string name="action_share">Share</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save_to_file">Save To File</string>
    <string name="paste_text">Paste</string>
    <string name="copy_text">Copy</string>
    <string name="text_selection_more">More…</string>
    <string name="application_name">&TERMUX_APP_NAME;</string>
    <string name="permission_run_command_label">Run commands in &TERMUX_APP_NAME; environment</string>
    <string name="permission_run_command_description">execute arbitrary commands within &TERMUX_APP_NAME;
        environment and access files</string>
    <string name="action_new_session">New session</string>
    <string name="title_max_terminals_reached">Max terminals reached</string>
    <string name="msg_max_terminals_reached">Close down existing ones before creating new.</string>
    <string name="title_rename_session">Set session name</string>
    <string name="action_rename_session_confirm">Set</string>
    <string name="title_create_named_session">New named session</string>
    <string name="title_create_named_root_session">New named root session</string>
    <string name="action_create_named_session_confirm">Create</string>
    <string name="reset_all_settings_title">Reset all settings?</string>
    <string name="new_root_session">New root session</string>
    <string name="exit">Exit</string>
    <string name="action_toggle_soft_keyboard">Keyboard</string>
    <string name="sessions_list">Sessions:</string>
    <string name="action_select_url">Select URL</string>
    <string name="title_select_url_dialog">Click URL to copy or long press to open</string>
    <string name="title_select_url_none_found">No URL found in the terminal.</string>
    <string name="msg_select_url_copied_to_clipboard">URL copied to clipboard</string>
    <string name="action_share_transcript">Share transcript</string>
    <string name="title_share_transcript">Terminal transcript</string>
    <string name="title_share_transcript_with">Send transcript to:</string>
    <string name="action_share_selected_text">Share selected text</string>
    <string name="title_share_selected_text">Terminal Text</string>
    <string name="title_share_selected_text_with">Send selected text to:</string>
    <string name="action_autofill_password">Autofill password</string>
    <string name="action_reset_terminal">Reset</string>
    <string name="msg_terminal_reset">Terminal reset</string>
    <string name="action_kill_process">Kill process (%d)</string>
    <string name="title_confirm_kill_process">Really kill this session?</string>
    <string name="action_toggle_keep_screen_on">Keep screen on</string>
    <string name="action_open_settings">Settings</string>
    <string name="notification_action_exit">Exit</string>
    <string name="notification_action_wake_lock">Acquire wakelock</string>
    <string name="notification_action_wake_unlock">Release wakelock</string>
    <string name="title_file_received">Save file in ~/downloads/</string>
    <string name="action_file_received_edit">Edit</string>
    <string name="action_file_received_open_directory">Open directory</string>
	<string name="error_wrong_custom_shell_path">Wrong custom shell path!</string>
    <string name="error_wrong_custom_home_path">Wrong custom $HOME path!</string>
    <string name="title_activity_termux_settings">&TERMUX_APP_NAME; Settings</string>
        <string name="termux_terminal_io_preferences_title">Terminal I/O</string>
        <string name="termux_terminal_io_preferences_summary">Preferences For Terminal I/O</string>
            <string name="termux_keyboard_header">Keyboard</string>
                <string name="termux_soft_keyboard_enabled_title">Soft Keyboard Enabled</string>
                <string name="termux_soft_keyboard_enabled_off">Soft keyboard will be disabled.</string>
                <string name="termux_soft_keyboard_enabled_on">Soft keyboard will be enabled. (Default)</string>
                <string name="termux_soft_keyboard_enabled_only_if_no_hardware_title">Soft Keyboard Only If No Hardware</string>
                <string name="termux_soft_keyboard_enabled_only_if_no_hardware_off">Soft keyboard will be enabled even when hardware keyboard is connected. (Default)</string>
                <string name="termux_soft_keyboard_enabled_only_if_no_hardware_on">Soft keyboard will be enabled only when no hardware keyboard is connected.</string>
            <string name="termux_touchscreen_header">Touchscreen</string>
                <string name="termux_pinch_in_title">Pinch</string>
                <string name="termux_pinch_in_off">Does nothing.</string>
                <string name="termux_pinch_in_on">Pulls out the side curtain. (Default)</string>
                <string name="termux_pinch_out_title">Unpinch</string>
                <string name="termux_pinch_out_off">Does nothing. (Default)</string>
                <string name="termux_pinch_out_on">Closes the current session.</string>
                <string name="termux_double_tap_title">Double Tap</string>
                <string name="termux_double_tap_off">Does nothing. (Default)</string>
                <string name="termux_double_tap_on">Selects text.</string>
            <string name="termux_other_header">Other</string>
                <string name="termux_vibration_title">Vibration</string>
                <string name="termux_vibration_off">Disabled.</string>
                <string name="termux_vibration_on">Enabled. (Default)</string>
                <string name="termux_quick_exit_title">\"Exit\" Button</string>
                <string name="termux_quick_exit_off">Terminates all sessions on long press. (Default)</string>
                <string name="termux_quick_exit_on">When pressed, immediately terminates all sessions.</string>
        <string name="termux_terminal_view_preferences_title">Terminal View</string>
        <string name="termux_terminal_view_preferences_summary">Preferences for terminal view</string>
            <string name="termux_terminal_view_view_header">View</string>
                <string name="termux_terminal_view_terminal_margin_adjustment_title">Terminal Margin Adjustment</string>
                <string name="termux_terminal_view_terminal_margin_adjustment_off">Terminal margin adjustment will be disabled.</string>
                <string name="termux_terminal_view_terminal_margin_adjustment_on">Terminal margin adjustment will be enabled.
                    It should be enabled as a try to fix the issue where soft keyboard covers part of extra keys/terminal view.
                    If it causes screen flickering on your devices, then disable it. (Default)</string>
                <string name="termux_terminal_drawer_transparency_title">Translucent Curtain</string>
                <string name="termux_terminal_drawer_transparency_summary">Transparency level of the sliding curtain.</string>
                <string name="termux_terminal_text_size_title">Text Size</string>
                <string name="termux_terminal_cursor_period_title">Cursor Blinking Period</string>
        <string name="termux_terminal_env_preferences_title">Environment Settings</string>
        <string name="termux_terminal_env_preferences_summary">Terminal Runtime Environment Settings</string>
            <string name="termux_terminal_env_shell_header">Shell</string>
                <string name="termux_terminal_env_custom_shell_title">Custom Shell</string>
                <string name="termux_terminal_env_custom_shell_off">Use \"/system/bin/sh\". (Default)</string>
                <string name="termux_terminal_env_custom_shell_on">Find and use \"login\", \"bash\", \"zsh\" or \"fish\" if installed.</string>
				<string name="termux_custom_shell_path_title">Custom Shell Path</string>
				<string name="termux_custom_shell_path_dialog_message">If you leave the field empty, an automatic search will be performed</string>
				<string name="termux_custom_shell_path_dialog_title">Enter path to executable</string>
                <string name="termux_use_custom_arguments_title">Use Launch Arguments</string>
                <string name="termux_use_custom_arguments_on">Launch arguments are used.</string>
                <string name="termux_use_custom_arguments_off">Launch arguments are not used. (Default)</string>
                <string name="termux_custom_arguments_title">Shell Launch Arguments</string>
                <string name="termux_custom_arguments_dialog_message">"Example:
You entered
-x
The shell startup command will be
/system/bin/sh -x"</string>
                <string name="termux_custom_arguments_dialog_title">Enter launch arguments</string>
                <string name="termux_custom_home_use_title">Change $HOME</string>
                <string name="termux_custom_home_use_off">"Don't use user's $HOME. (Default)"</string>
                <string name="termux_custom_home_use_on">Use custom $HOME.</string>
                <string name="termux_custom_home_title">Custom $HOME</string>
                <string name="termux_custom_home_dialog_title">Enter the path to the directory</string>
                <string name="termux_custom_home_dialog_message">"Example:
/storage/emulated/0"</string>
            <string name="termux_terminal_dangerous_header">Dangerous</string>
                <string name="termux_root_as_default_title">Root As Default</string>
                <string name="termux_root_as_default_off">Sessions start with the standard rights. (Default)</string>
                <string name="termux_root_as_default_on">Sessions start with the root rights. (Very dangerous)</string>
                <string name="termux_custom_home_root_title">$HOME When Root</string>
                <string name="termux_custom_home_root_off">Program directory. (Default)</string>
                <string name="termux_custom_home_root_on">Use custom path. (Very dangerous)</string>
            <string name="termux_terminal_other_header">Misc</string>
                <string name="termux_remove_task_title">Remove Task</string>
                <string name="termux_remove_task_off">Do not remove task from recents when activity ends. (Default)</string>
                <string name="termux_remove_task_on">Remove task from recents when activity ends.</string>
                <string name="termux_terminal_clear_all_settings_title">Clear All Settings</string>
                <string name="termux_terminal_clear_all_settings_summary">All settings will be reset to default.</string>
                <string name="termux_terminal_about_title">About App</string>
                <string name="termux_terminal_about_summary">Displays some information about the application.</string>
</resources>