<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="shell"
        app:title="@string/termux_terminal_env_shell_header">

        <SwitchPreferenceCompat
            app:key="use_custom_shell"
            app:summaryOff="@string/termux_terminal_env_custom_shell_off"
            app:summaryOn="@string/termux_terminal_env_custom_shell_on"
            app:title="@string/termux_terminal_env_custom_shell_title"
            app:disableDependentsState="false" />

        <EditTextPreference
            app:key="custom_shell_string"
            app:title="@string/termux_custom_shell_path_title"
            app:dialogTitle="@string/termux_custom_shell_path_dialog_title"
            app:dialogMessage="@string/termux_custom_shell_path_dialog_message"
            app:useSimpleSummaryProvider="true"
            app:dependency="use_custom_shell" />

        <SwitchPreferenceCompat
            app:key="use_custom_arguments"
            app:summaryOff="@string/termux_use_custom_arguments_off"
            app:summaryOn="@string/termux_use_custom_arguments_on"
            app:title="@string/termux_use_custom_arguments_title"
            app:disableDependentsState="false" />

        <EditTextPreference
            app:key="custom_arguments"
            app:title="@string/termux_custom_arguments_title"
            app:dialogTitle="@string/termux_custom_arguments_dialog_title"
            app:dialogMessage="@string/termux_custom_arguments_dialog_message"
            app:useSimpleSummaryProvider="true"
            app:dependency="use_custom_arguments" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="env"
        app:title="@string/termux_terminal_env_shell_header">

        <SwitchPreferenceCompat
            app:key="use_custom_home"
            app:summaryOff="@string/termux_custom_home_use_off"
            app:summaryOn="@string/termux_custom_home_use_on"
            app:title="@string/termux_custom_home_use_title"
            app:disableDependentsState="false" />

        <EditTextPreference
            app:key="custom_home_string"
            app:title="@string/termux_custom_home_title"
            app:dialogTitle="@string/termux_custom_home_dialog_title"
            app:dialogMessage="@string/termux_custom_home_dialog_message"
            app:useSimpleSummaryProvider="true"
            app:dependency="use_custom_home" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="dangerous"
        app:title="@string/termux_terminal_dangerous_header">

        <SwitchPreferenceCompat
            app:key="root_as_default"
            app:summaryOff="@string/termux_root_as_default_off"
            app:summaryOn="@string/termux_root_as_default_on"
            app:title="@string/termux_root_as_default_title" />

        <SwitchPreferenceCompat
            app:key="custom_home_root"
            app:summaryOff="@string/termux_custom_home_root_off"
            app:summaryOn="@string/termux_custom_home_root_on"
            app:title="@string/termux_custom_home_root_title" />

    </PreferenceCategory>

</PreferenceScreen>
